[package]
name = "josekit"
version = "0.8.3"
description = "JOSE (Javascript Object Signing and Encryption) library for Rust."
repository = "https://github.com/hidekatsu-izuno/josekit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Hidekatsu Izuno <hidekatsu.izuno@gmail.com>"]
keywords = ["jose", "jwt", "jws", "jwe", "jwa"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.21"
flate2 = "1"
time = "0.3"
rand = "0.8.5"
digest = "0.10.7"
sha2 = "0.10.7"
elliptic-curve = { version = "0.13.5", features = ["jwk", "ecdh", "pem"] }
aes-gcm = "0.10.2"
p256 = "0.13.2"
ecdsa = { version = "0.16.8", features = ["signing", "verifying"] }

[dev-dependencies]
doc-comment = "0.3.3"
